# universal-android-debloater-next-generation

./: .deepsource.toml  .gitignore  .mailmap  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE.md  build.rs  clippy.toml  flake.nix  privacy-policy.md  schema.json
.cargo/: config.toml
.github/: pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  3-add-new-packages.yml  4-debloat-issue-report.yml  5-update-apps-description-or-recommendation.yml  6-documentation.yml  7-ci.yml  add-new-package-s-.md  bug_report.md  debloat-issue-report.md  documentation.md  feature_request.md  update-apps-description-or-recommendation.md
.github/PULL_REQUEST_TEMPLATE/: app.md  documentation.md  packages.md
.github/pull_request_template/: app.md  documentation.md  packages.md
.github/workflows/: build_artifacts.yml  ci.yml  lint-uad-list.yml  release.yml
crates/uad-cli/: Cargo.toml  README.md
crates/uad-cli/examples/: usage.sh
crates/uad-cli/src/: commands.rs  device.rs  filters.rs  main.rs  output.rs  repl.rs
crates/uad-core/: Cargo.toml
crates/uad-core/src/: adb.rs  config.rs  lib.rs  mod.rs  save.rs  sync.rs  theme.rs  uad_lists.rs  update.rs  utils.rs
crates/uad-gui/: Cargo.toml
crates/uad-gui/src/: gui.rs  helpers.rs  lib.rs  main.rs  style.rs  theme.rs
crates/uad-gui/src/views/: about.rs  list.rs  settings.rs
crates/uad-gui/src/widgets/: mod.rs  modal.rs  navigation_menu.rs  package_row.rs  text.rs
resources/assets/: icons.json  manifest.rc  uad_edit.py  uad_listNew.json  uad_lists.json  uad_listsARCHIVE.json
resources/extracted_apks/: android.auto_generated_characteristics_rro.apk
src/: main.rs
src/core/: adb.rs  adb_safe.rs  certificates.rs  config.rs  helpers.rs  mod.rs  save.rs  sync.rs  theme.rs  uad_lists.rs  update.rs  utils.rs
src/gui/: mod.rs  style.rs  styling.rs
src/gui/views/: about.rs  list.rs  mod.rs  settings.rs
src/gui/widgets/: mod.rs  modal.rs  navigation_menu.rs  package_row.rs  text.rs
