[package]
name = "uad-ng"
description = "A cross-platform GUI debloater for android devices"
version = "1.1.2"
authors = ["Universal-Debloater-Alliance"]
license = "GPL-3.0"
homepage = "https://github.com/Universal-Debloater-Alliance/universal-android-debloater-next-generation"
repository = "https://github.com/Universal-Debloater-Alliance/universal-android-debloater-next-generation"
readme = "README.md"
keywords = ["debloater", "android", "adb", "privacy", "bloatware"]
categories = ["gui"]
edition = "2024"

[features]
default = ["wgpu", "self-update"]
wgpu = [] # Iced/wgpu is default
self-update = ["flate2", "tar"]
no-self-update = []

[dependencies]
dark-light = "2"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
fern = { version = "^0", features = ["colored"] }
chrono = { version = "^0.4", default-features = false, features = [
  "std",
  "clock",
] }
log = "^0.4"
toml = "^0"
dirs = "^6"
ureq = { version = "3", features = ["json"] }
retry = "^2.0.0"
iced = { version = "^0.12.0", features = ["advanced", "image"] }
rfd = "^0.15"
csv = "^1.3"

[target.'cfg(not(target_os = "windows"))'.dependencies]
flate2 = { version = "^1", optional = true }
tar = { version = "^0.4", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
win32console = "^0.1.5"

[profile.release]
lto = "thin"
opt-level = 2
codegen-units = 4

[profile.opt]
inherits = "release"
opt-level = "s"
codegen-units = 1
lto = "fat"
strip = true
panic = "abort"

[build-dependencies]
embed-resource = "3"

[lints.rust]
deprecated_safe = "warn"

[lints.clippy]
undocumented_unsafe_blocks = "forbid"
exit = "deny"
panic_in_result_fn = "warn"
infinite_loop = "warn"
mem_forget = "warn"
string_to_string = "warn"
format_push_string = "warn"
large_include_file = "warn"
shadow_unrelated = "warn"
struct_field_names = "allow" # annoying
module_name_repetitions = "allow" # annoying

disallowed_types = "deny"
disallowed_methods = "deny"

allow_attributes_without_reason = "warn"
pedantic = { level = "warn", priority = -1 }
