[workspace]
members = [
    "crates/uad-core",
    "crates/uad-gui", 
    "crates/uad-cli"
]
resolver = "2"

[workspace.package]
version = "1.2.0"
authors = ["Universal-Debloater-Alliance"]
license = "GPL-3.0"
homepage = "https://github.com/Universal-Debloater-Alliance/universal-android-debloater-next-generation"
repository = "https://github.com/Universal-Debloater-Alliance/universal-android-debloater-next-generation"
readme = "README.md"
keywords = ["debloater", "android", "adb", "privacy", "bloatware"]
categories = ["gui"]
edition = "2024"

[workspace.dependencies]
# Core dependencies
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
log = "^0.4"
chrono = { version = "^0.4", default-features = false, features = ["std", "clock"] }
toml = "^0"
dirs = "^6"
ureq = { version = "3", features = ["json"] }
retry = "^2.0.0"
csv = "^1.3"

# GUI dependencies
iced = { version = "=0.14.0", features = ["advanced", "image"] }
image = "0.25"
rfd = "^0.17.1"
dark-light = "2"
fern = { version = "^0", features = ["colored"] }

# CLI dependencies
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }

# Platform-specific dependencies
flate2 = "^1"
tar = "^0.4"
win32console = "^0.1.5"

[workspace.lints.rust]
deprecated_safe = "warn"

[workspace.lints.clippy]
undocumented_unsafe_blocks = "forbid"
panic_in_result_fn = "warn"
infinite_loop = "warn"
format_push_string = "warn"
large_include_file = "warn"
shadow_unrelated = "warn"
struct_field_names = "allow" # annoying

disallowed_types = "deny"
disallowed_methods = "deny"

pedantic = { level = "warn", priority = -1 }