[package]
name = "uad-gui"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories = ["gui"]
edition.workspace = true

[[bin]]
name = "uad-ng"
path = "src/main.rs"

[features]
default = ["wgpu", "self-update"]
wgpu = [] # Iced/wgpu is default
self-update = ["flate2", "tar"]
no-self-update = []

[dependencies]
uad-core = { path = "../uad-core", features = ["gui", "self-update"] }
iced.workspace = true
image.workspace = true
rfd.workspace = true
dark-light.workspace = true
fern.workspace = true
chrono.workspace = true
dirs.workspace = true
log.workspace = true
flate2 = { workspace = true, optional = true }
tar = { workspace = true, optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
win32console.workspace = true

[build-dependencies]
embed-resource = "3"

[lints.rust]
deprecated_safe = "warn"

[lints.clippy]
undocumented_unsafe_blocks = "forbid"
exit = "deny"
panic_in_result_fn = "warn"
infinite_loop = "warn"
mem_forget = "warn"
implicit_clone = "warn"
format_push_string = "warn"
large_include_file = "warn"
shadow_unrelated = "warn"
struct_field_names = "allow" # annoying
module_name_repetitions = "allow" # annoying

disallowed_types = "deny"
disallowed_methods = "deny"

allow_attributes_without_reason = "warn"
pedantic = { level = "warn", priority = -1 }
